--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=crew-planner
 
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_SECRET}
+spring.security.oauth2.client.registration.google.client-id=34950904791-eh9hbq5dj4sojmvg09113uqdp8dq89ju.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
@@ -15,5 +15,10 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 security.jwt.secret=${SIGN_KEY}
+addres=${REACT_APP_URL}
 
-server.port=${PORT:8080}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/test
+#spring.datasource.username=test
+#spring.datasource.password=test
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#security.jwt.secret=veryveryveryverylongsecretthatnobodyshouldknow
