OAuth correct redirect?

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 security.jwt.secret=${SIGN_KEY}
-addres=${REACT_APP_URL}
+address=${REACT_APP_URL}
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/test
 #spring.datasource.username=test
