--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-yHtYIRACz
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+server.forward-headers-strategy=framework
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
