--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -13,8 +13,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/?source=pwa",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "theme_color": "#f8fafd",
+  "background_color": "#f8fafd"
 }
